# cli

./: .gitignore  .graphqlrc.yaml  Cargo.toml  LICENSE  README.md  clippy.toml  flake.nix
.cursor/rules/: general.mdc  rust.mdc
.github/: bountybot.toml
.github/workflows/: docker.yml  nix.yml  npm-publish.yml  rust.yml
javascript/: .gitignore  package.json  pnpm-lock.yaml
javascript/scripts/: build.js  postinstall.js
src/: animation.rs  bountybot.rs  command.rs  config.rs  github.rs  issue.rs  lib.rs  main.rs  parse.rs
src/command/: completion.rs  login.rs  mod.rs  solve.rs  start.rs
src/commands/: bounty.rs
src/queries/: active_quests.graphql
