[package]
name = "bounty"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"
color-eyre = { version = "0.6.3", features = ["capture-spantrace"] }
eyre = "0.6.12"
git2 = { version = "0.20.0" }
indicatif = { version = "0.17.8", features = ["improved_unicode"] }
octocrab = { version = "0.43.0" }
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5.0.1"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
dirs = "6.0.0"
url = "2.5.4"
regex = "1.11.1"

[lints.clippy]
complexity = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

missing_errors_doc = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
